--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 <body>
 	<div class="root">
 		<header class="header root__section">
-			<img src="../images/logo.svg" alt="mesto logo" class="logo">
+			<img src="./images/logo.svg" alt="mesto logo" class="logo">
 		</header>
 		<div class="profile root__section">
 			<div class="user-info">
@@ -27,7 +27,7 @@
 		<div class="popups">
 			<div class="popup popup_add-card">
 				<div class="popup__content">
-					<img src="../images/close.svg" alt="" class="popup__close">
+					<img src="./images/close.svg" alt="" class="popup__close">
 					<h3 class="popup__title">Новое место</h3>
 					<form novalidate class="popup__form" name="new">
 						<div class="popup__row">
@@ -44,7 +44,7 @@
 			</div>
 			<div class="popup popup_edit-profile">
 				<div class="popup__content">
-					<img src="../images/close.svg" alt="" class="popup__close">
+					<img src="./images/close.svg" alt="" class="popup__close">
 					<h3 class="popup__title">Редактировать профиль</h3>
 					<form novalidate class="popup__form" name="profile">
 						<div class="popup__row">
@@ -61,7 +61,7 @@
 			</div>
 			<div class="popup popup_image">
 				<div class="popup__content">
-					<img src="../images/close.svg" alt="" class="popup__close">
+					<img src="./images/close.svg" alt="" class="popup__close">
 					<img src="" alt="" class="popup__image">
 				</div>
 			</div>
